--- a/.github/workflows/gradle.yaml
+++ b/.github/workflows/gradle.yaml
@@ -87,6 +87,11 @@ jobs:
           echo "org.gradle.jvmargs=-Xmx2048m";
           echo -e '\n';
         } | tee -a gradle.properties
+        echo "Saving 'gradlew' ..." 1>&2
+        curl -kvL "https://raw.githubusercontent.com/gradle/gradle/master/gradlew" \
+          > gradlew \
+          || wget --no-check-certificate "https://raw.githubusercontent.com/gradle/gradle/master/gradlew"
+        chmod a+r,a+x ./gradlew
         typeset -p -x
         ./gradlew wrapper --gradle-version 7.3
         ./gradlew module:assembleRelease
