--- a/.github/workflows/gradle.yaml
+++ b/.github/workflows/gradle.yaml
@@ -92,6 +92,14 @@ jobs:
           > gradlew \
           || wget --no-check-certificate "https://raw.githubusercontent.com/gradle/gradle/master/gradlew"
         chmod a+r,a+x ./gradlew
+        mkdir -p gradle/wrapper
+        {
+          echo "distributionBase=GRADLE_USER_HOME"
+          echo "distributionPath=wrapper/dists"
+          echo "distributionUrl=https\\://services.gradle.org/distributions/gradle-7.4.2-bin.zip"
+          echo "zipStoreBase=GRADLE_USER_HOME"
+          echo "zipStorePath=wrapper/dists"
+        } | tee gradle/wrapper/gradle-wrapper.properties
         typeset -p -x
         ./gradlew wrapper --gradle-version 7.3
         ./gradlew module:assembleRelease
